core/src/main/java/com/example/core/errors/exception/EmptyPagingDataRequestException.java
package com.example.core.errors.exception;

import com.example.core.errors.ErrorMessage;

public class EmptyPagingDataRequestException extends RuntimeException {

    public EmptyPagingDataRequestException() {
        super(ErrorMessage.EMPTY_DATA_TO_PAGING);
    }
}
